contracts/traits/error_traits.txt
    Checking propchain-traits v1.0.0 (C:\Users\dell\Documents\web3\PropChain-contract\contracts\traits)
error[E0583]: file not found for module `observer`
  --> contracts\traits\src\lib.rs:11:1
   |
11 | pub mod observer;
   | ^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `observer`, create file "contracts\traits\src\observer.rs" or "contracts\traits\src\observer\mod.rs"
   = note: if there is a `mod observer` elsewhere in the crate already, import it with `use crate::...` instead

For more information about this error, try `rustc --explain E0583`.
error: could not compile `propchain-traits` (lib) due to 1 previous error
